# fs-lab

./: CMakeLists.txt  README.md  main.cpp
include/: Entity.hpp  Error.hpp  Filesystem.hpp  IO.hpp  Util.hpp
include/Core/: Cached.hpp  Default.hpp  Interface.hpp
src/: Filesystem.cpp  IO.cpp
src/Core/: Cached.cpp  Default.cpp
